# weekly-qcon-watchlist

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml  watchlist.toml
.github/workflows/: ci.yml  historical-seed.yml  scheduled-backfill.yml  weekly-watchlist.yml
data/: infoq.db
infoq_watchlist/: __init__.py  cli.py  config.py  crawler.py  github_sync.py  migrations.py  models.py  parser.py  report.py  scoring.py  storage.py
infoq_watchlist/migrations/: 001_create_talks.sql  002_add_reporting_state.sql  003_add_presentation_url.sql  004_add_github_sync_state.sql  005_add_historical_crawl_state.sql  006_add_conference_year.sql
scripts/: __init__.py  migrate_historical_qcon.py
tests/: test_cli.py  test_crawler.py  test_github_sync.py  test_historical_migration_script.py  test_migrations.py  test_parser.py  test_report.py  test_scoring.py  test_storage.py  test_workflows.py
tests/fixtures/: infoq_detail.html  infoq_listing.html  infoq_listing_with_pagination.html
