[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weekly-qcon-watchlist"
version = "0.1.0"
description = "Ranked InfoQ/QCon watchlists from deterministic local scoring."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "pydantic>=2.0",
  "requests>=2.31",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
infoq-watchlist = "infoq_watchlist.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["infoq_watchlist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
